# portable-python-cmake-buildsystem

./: CMakeLists.txt  README.rst
.github/workflows/: CI.yml
cmake/: CheckEndianness.cmake  ConfigureChecks.cmake  Extensions.cmake  FindPatch.cmake  PythonApplyPatches.cmake  check_float_endianness.c  makefile-variables.in  platform.c
cmake/config-mingw/: pyconfig.h
cmake/config-unix/: pyconfig.h.in
cmake/extensions/: CMakeLists.txt
cmake/libpython/: CMakeLists.txt
cmake/python/: CMakeLists.txt
cmake/tools/: CMakeLists.txt
patches/3.10/: 02-freebsd-errno.patch  03.2-sysconfig-pkgconfig.patch  04-ssl.patch
patches/3.11/: 01-PC-config_minimal.patch  02-freebsd-errno.patch  04-PC-_msi.patch  05-sys-abiflags-default.patch  06-PC-_msi.patch  07-getpath_noop-missing-stub.patch  07-test.patch
patches/3.12/: 02-freebsd-errno.patch  03-cosmo-sys-random.patch  03.2-sysconfig-pkgconfig.patch  05-sys-abiflags-default.patch  07-getpath_noop-missing-stub.patch  08-Python-tokenize-builtin.patch
patches/3.12/portable/: 01-getpath-portable-prefix.patch  03-sysconfig-pkgconfig.patch
patches/3.13/: 01-PC-config_minimal.patch  02-freebsd-errno.patch
patches/3.13/portable/: 04-ssl.patch
patches/3.8/: 03-sysconfig-build-vars.patch  04-ssl.patch
patches/3.9/: 02-freebsd-errno.patch  03-cosmo-sys-random.patch  04-bigendian-macro.patch
patches/3.9/portable/: 03-sysconfig-pkgconfig.patch
